--- a/index.html
+++ b/index.html
@@ -19,17 +19,24 @@
         <div class="sub-children sub-child1">
           <h2>Countries Flags API</h2>
           <p>
-            This is an exmaple of a RESTful API.
+            This is an example of a RESTful API.
           </p>
           <p>
-            Data source: https://restcountries.eu/rest/v2/all
+            Let's get coutries' flags and names.
           </p>
           <p>
-            This layout was built by using CSS Grids.
+            Data source:
+            <a href="https://restcountries.eu/rest/v2/all" target="_blank"
+              >https://restcountries.eu/rest/v2/all</a
+            >
+          </p>
+
+          <p style="font-size: 20px; color: purple;">
+            Click to get the data:
+            <button id="load">Get Data</button>
           </p>
         </div>
         <div class="sub-children sub-child2"></div>
-        <div class="sub-children sub-child3"></div>
       </div>
       <div class="main-children main-child3">&copy; Heloysa Tancredo 2019</div>
     </div>
